--- a/public-transport-tracker/src/main/resources/application.properties.sample
+++ b/public-transport-tracker/src/main/resources/application.properties.sample
@@ -24,3 +24,7 @@ security.jwt.secret-key=<SECRET_KEY>
 security.jwt.expiration-time=900000
 # one day in milliseconds
 security.jwt.refresh-expiration-time=86400000
+
+# Application configuration
+application.users.admin.username=admin
+application.users.admin.password=password
