Implement role and permission based authorization

--- a/public-transport-tracker/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/public-transport-tracker/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -17,6 +17,10 @@
             "description": "The default admin username. Will be created if no admin in repository."
         },
         {
+            "name": "application.users.admin.email",
+            "description": "The default admin email."
+        },
+        {
             "name": "application.users.admin.password",
             "description": "The password for default admin user."
         }
