Implement permission based Authorization with user controller

--- a/public-transport-tracker/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/public-transport-tracker/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -13,15 +13,15 @@
             "description": "The espiration time for a JWT refresh token in milliseconds."
         },
         {
-            "name": "application.users.admin.username",
+            "name": "application.admin.username",
             "description": "The default admin username. Will be created if no admin in repository."
         },
         {
-            "name": "application.users.admin.email",
+            "name": "application.admin.email",
             "description": "The default admin email."
         },
         {
-            "name": "application.users.admin.password",
+            "name": "application.admin.password",
             "description": "The password for default admin user."
         }
     ]
