Use Exceptions instead of returning null in services and make LOGIN a permission

--- a/public-transport-tracker/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/public-transport-tracker/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -23,6 +23,10 @@
         {
             "name": "application.admin.password",
             "description": "The password for default admin user."
+        },
+        {
+            "name": "application.http-url",
+            "description": "The real base URL used to access the spring boot server. If a reverse proxy is used its address should be set here."
         }
     ]
 }
