--- a/public-transport-tracker/src/main/resources/application.properties.sample
+++ b/public-transport-tracker/src/main/resources/application.properties.sample
@@ -26,6 +26,11 @@ security.jwt.expiration-time=900000
 security.jwt.refresh-expiration-time=86400000
 
 # Application configuration
+
+# the real application url (if a reverseproxy is used its url should be used)
+application.http-url=http://localhost:8080/
+
+# the defualt admin
 application.admin.username=<ADMIN_NAME>
 application.admin.password=<ADMIN_PASSWORD>
 application.admin.email=<ADMIN_EMAIL>
